infra/kubernetes/minio/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minio
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: console
      port: 9001
      targetPort: 9001
      protocol: TCP
